--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Under Develpoment
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Podcast</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Upokotha Podcast</h1>
+    </header>
+    <main>
+        <div id="episodes">
+            <!-- Podcast episodes will be dynamically loaded here -->
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
